# PotatoBlockChain

./: Cargo.toml  LICENSE  README.md
example/: Cargo.toml
node/: Cargo.toml
node/src/BlockChain/: Cargo.toml
node/src/BlockChain/src/: db.rs  lib.rs  transaction.rs
node/src/utils/: Cargo.toml
node/tests/: test.rs
src/BlockChain/: Cargo.toml
src/BlockChain/src/: block.rs  lib.rs
src/utils/src/: hash.rs
