[package]
name = "node"
description = "Potato Block Chain Node"
version = "0.1.0"
authors = ["rise <rise.worlds@outlook.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
BlockChain = {path = "src/BlockChain"}
utils = {path = "src/utils"}

[[bin]]
path = "src/main.rs"
name = "node"
