[package]
name = "BlockChain"
version = "0.1.0"
authors = ["rise <rise.worlds@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
bigint = "4"
rocksdb = "0.14.0"

